# PrintCountPay

./: .gitignore  Cargo.toml  counter_oids.ron  counter_oids_Aficio_MP_7502.ron  counters_default_oids.txt  polling_export.txt  polling_export_Africo_MP.txt  printers.ron  printers_self.ron  tasklist.md
.github/workflows/: ci.yml
app/: Cargo.toml
app/src/: app.rs  logging.rs  main.rs
core/: Cargo.toml
core/src/: counters.rs  discovery.rs  error.rs  lib.rs  model.rs  ricoh.rs  snmp.rs  targets.rs
docs/: README.md  SNMP.md  USAGE.md  WORKSPACE.md
ui/: Cargo.toml
ui/src/: app.rs  executor.rs  lib.rs
ui/src/app/: actions.rs  badge_overlay.rs  constants.rs  helpers.rs  styles.rs  types.rs  views.rs
