[package]
name = "printcountpay-ui"
version.workspace = true
edition.workspace = true

[dependencies]
arboard.workspace = true
iced = { workspace = true, features = ["advanced"] }
printcountpay-core = { path = "../core" }
ron.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
